--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -56,23 +56,20 @@
     <link href="@Url.Content("~/lib/swalert/sweetalert2.min.css")" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
 
-
-    @*<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tooltipster/4.2.8/css/tooltipster.bundle.min.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tooltipster/4.2.8/js/tooltipster.bundle.min.js"></script>*@
-
-    @*<script src="@Url.Content("~/lib/tooltipster/js/tooltipster.bundle.min.js")"></script>
-    <link rel="stylesheet" href="@Url.Content("~/lib/tooltipster/css/tooltipster.bundle.min.css")" />
-    <link rel="stylesheet" href="@Url.Content("~/lib/tooltipster/css/plugins/tooltipster/sideTip/themes/tooltipster-sideTip-shadow.min.css")" />*@
-
-    @*<script src="@Url.Content("~/lib/Opentip/opentip-jquery.min.js")"> </script>
-    <link rel="stylesheet" href="@Url.Content("~/lib/Opentip/opentip.css")" />*@
-
-    <link rel="stylesheet" href="https://unpkg.com/tippy.js@6.3.7/dist/tippy.css">
+    @*<link rel="stylesheet" href="https://unpkg.com/tippy.js@6.3.7/dist/tippy.css">
+    <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/themes/light.css">*@
     <script src="https://unpkg.com/@@popperjs/core@2"></script>
-    <script src="https://unpkg.com/tippy.js@6"></script>
+    @*<script src="https://unpkg.com/tippy.js@6"></script>*@
+
+    <link rel="stylesheet" href="@Url.Content("~/lib/Tippy/css/tippy.css")" />
+    <link rel="stylesheet" href="@Url.Content("~/lib/Tippy/css/light.css")" />
+    <link rel="stylesheet" href="@Url.Content("~/lib/Tippy/css/shift-away.css")" />
+    <link rel="stylesheet" href="@Url.Content("~/lib/Tippy/css/backdrop.css")" />
+    <script src="@Url.Content("~/lib/Tippy/tippy-bundle.umd.min.js")"></script>
+    <script src="@Url.Content("~/lib/Popper/popper.min.js")"></script>
 @* 
    
-     <script src="~/js/owl.carousel.min.js"></script>
+    <script src="~/js/owl.carousel.min.js"></script>
     <script src="~/js/popper.min.js"></script>
     <script src="~/js/materialdatetimepicker.js"></script> 
 
