--- a/Views/adAgregarUsuario/adAgregarUsuario.cshtml
+++ b/Views/adAgregarUsuario/adAgregarUsuario.cshtml
@@ -252,7 +252,7 @@
                             change: function (data) {
                                 //console.log(data)
                                 var value = this.text();
-                                if (value === "Cerrador") {
+                                if (value === "Liquidador") {
                                     $("#DIV_Gasolineras").removeClass("d-none")
                                     $("#DIV_Gasolineras").addClass("d-block")
                                 } else {
