--- a/Views/adRazonesCancelacion/adRazonesCancelacion.cshtml
+++ b/Views/adRazonesCancelacion/adRazonesCancelacion.cshtml
@@ -117,8 +117,8 @@
                                 } else {
                                     $._combustible.alert("success", "Creacion exitosa", mensaje.resultado)
                                     $.Grid.DataGrid();
-                                    $("#input_RazonCancel").val()
-                                    $("#InputNombreCentroCosto").val("")
+                                    $("#input_RazonCancel").val("")
+                                    //$("#InputNombreCentroCosto").val("")
                                 }
                             })
                         }
