--- a/Views/adAnulacionEliminacionVales/adAnulacionEliminacionVales.cshtml
+++ b/Views/adAnulacionEliminacionVales/adAnulacionEliminacionVales.cshtml
@@ -32,7 +32,7 @@
                 <div class="modal-body">
                     <div class="container-fluid">
                         <div class="row">
-                            <span>Seleccione la razon de anulacion</span>
+                            <span>Seleccione la razón de anulación</span>
                         </div>
                         <div class="row pt-lg-2">
                             <div class="col-lg-12">
@@ -288,7 +288,7 @@
                     switch: function (anulado, ValeCombustubibleID) {
                         var _this = this
                         if (anulado === 0) {
-                            $("#editarModalLabel").text("Anulacion de vales")
+                            $("#editarModalLabel").text("Anulación de vales")
                             $("#BTN_Anular").attr("disabled", true)
                             $("#ModalAlert").text("")
                             $("#InputRazonesCancelacion").data("kendoDropDownList").select(0)
