--- a/Views/adRegistarCompany/adRegistarCompany.cshtml
+++ b/Views/adRegistarCompany/adRegistarCompany.cshtml
@@ -7,7 +7,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>COMBUSTIBLEAESCORE</title>
+    <title>ValesCombustible - Registro empresas</title>
     <link rel="stylesheet" href="@Url.Content("~/lib/bootstrap/css/bootstrap.min.css")" />
 
     <script src="@Url.Content("~/js/jquery-3.3.1.min.js")"></script>
