--- a/Views/Introduccion/Introduccion.cshtml
+++ b/Views/Introduccion/Introduccion.cshtml
@@ -5,14 +5,14 @@
     Layout = null;
 }
 
-@await Html.PartialAsync("~/Views/adProyectos/adProyectos.cshtml");
+@*@await Html.PartialAsync("~/Views/adTutorial/adTutorial.cshtml");*@
 
-@*<section>
+<section>
     <div class="card p-3 d-flex justify-content-center align-items-center">
         <h2 class="text-center text-light">Sistema de Vales Combustible</h2>
     </div>
-</section>*@
-@*<style>
+</section>
+<style>
     .card{
         height: 80vh;
         background: url(@Url.Content("~/images/intro.jpg"));
@@ -22,4 +22,4 @@
     h2{
         font-size:150px;
     }
-</style>*@
+</style>
