--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -79,7 +79,11 @@
     <link href="~/css/bootstrap.min.css" rel="stylesheet" />
     <link href="~/css/materialdatetimepicker.css" rel="stylesheet" />*@
 
-    
+    <!-- CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/smartwizard@6/dist/css/smart_wizard_all.min.css" rel="stylesheet" type="text/css" />
+
+    <!-- JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/smartwizard@6/dist/js/jquery.smartWizard.min.js" type="text/javascript"></script>
 
 
 
